ingress/counter-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - pathType: Exact
            path: "/counter"
            backend:
              service:
                name: counter-service
                port:
                  number: 80
